# neural_mesh_simplification_tom

./: .editorconfig  .gitignore  README.txt  README_original.md  pyproject.toml  requirements.txt  train.ipynb
configs/: default.yaml  local.yaml
examples/: example.py
scripts/: download_test_meshes.py  evaluate.py  infer.py  preprocess_data.py  train.py
src/neural_mesh_simplification/: __init__.py
src/neural_mesh_simplification/api/: __init__.py  neural_mesh_simplifier.py
src/neural_mesh_simplification/data/: dataset.py
src/neural_mesh_simplification/losses/: combined_loss.py  edge_crossing_loss.py  overlapping_triangles_loss.py  surface_distance_loss.py  triangle_collision_loss.py
src/neural_mesh_simplification/models/: edge_predictor.py  face_classifier.py  neural_mesh_simplification.py  point_sampler.py
src/neural_mesh_simplification/models/layers/: devconv.py
src/neural_mesh_simplification/trainer/: resource_monitor.py  trainer.py
src/neural_mesh_simplification/utils/: __init__.py
tests/: test_dataset.py  test_edge_predictor.py  test_face_classifier.py  test_mesh_operations.py  test_metrics.py  test_model.py  test_model_layers.py  test_point_sampler.py  test_trimesh.py
tests/losses/: test_edge_crossings_loss.py  test_overlapping_triangles_loss.py  test_proba_chamfer_distance.py  test_proba_surface_distance.py  test_triangle_collision_loss.py
